[package]
name = "judge"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2"
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
redis = { version = "0.25", features = ["tokio-comp"] }
